--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 job:
-	build-and-deploy: #그룹화명
+	# build-and-deploy: 
 		runs-on: ubuntu-latest #명령어가 실행될 환경 설정  
 			steps:
       - name: Checkout
